demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

name: nginx-2048-ingress
annotations:
   kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: myservicea.kevinsha007.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-2048
             port:
               number: 80
